--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-certifi==2021.5.30
-chardet==4.0.0
+certifi==2021.10.8
+charset-normalizer==2.0.10
 docopt==0.6.2
-idna==2.10
-python-dotenv==0.18.0
-requests==2.26.0
-typing==3.10.0.0
-urllib3==1.26.7
+idna==3.3
+python-dotenv==0.19.2
+requests==2.27.1
+urllib3==1.26.8
